--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="just-docs"><a class="header" href="#just-docs">Just docs</a></h1>
+<ul>
+<li><a href="./guides/build-defichain-in-macos.html">Build DeFiChain Node In MacOS</a></li>
+</ul>
 
                     </main>
 
