--- a/print.html
+++ b/print.html
@@ -136,6 +136,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="just-docs"><a class="header" href="#just-docs">Just docs</a></h1>
+<ul>
+<li><a href="./guides/build-defichain-in-macos.html">Build DeFiChain Node In MacOS</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="build-defichain-node-in-macos"><a class="header" href="#build-defichain-node-in-macos">Build DeFiChain Node In MacOS</a></h1>
 <h3 id="get-the-source-code"><a class="header" href="#get-the-source-code">Get the source code</a></h3>
 <pre><code class="language-bash">git clone -b feature/evm https://github.com/defich/ain
