deploy: 6b6fa5bf9ef199ac4c0906974fe955a5150f8f95

--- a/print.html
+++ b/print.html
@@ -158,10 +158,14 @@ cd ain
 <p>Install Rust using the method provided in the <a href="https://www.rust-lang.org/tools/install">Official website</a> or run the following command:</p>
 <pre><code class="language-bash">./make.sh pkg_install_rust
 </code></pre>
-<h3 id="5-build"><a class="header" href="#5-build">5. Build</a></h3>
-<p>Build the node:</p>
+<h3 id="5-build-the-node"><a class="header" href="#5-build-the-node">5. Build the node</a></h3>
 <pre><code class="language-bash">./make.sh build
 </code></pre>
+<h3 id="6-run-the-node-on-floppynet"><a class="header" href="#6-run-the-node-on-floppynet">6. Run the node on Floppynet</a></h3>
+<pre><code class="language-bash">build/src/defid -devnet --daemon -connect=35.187.53.161
+</code></pre>
+<p>That's it ;)</p>
+<p>Now you can proceed with the official guide to connect Metamask <a href="https://defich.github.io/handbook/guides/guide_floppynet_short.html">https://defich.github.io/handbook/guides/guide_floppynet_short.html</a></p>
 
                     </main>
 
