deploy: 18a0c8c71237a25d03fa3c5279bccce102fc5160

--- a/guides/build-defichain-in-macos.html
+++ b/guides/build-defichain-in-macos.html
@@ -150,7 +150,7 @@ cd ain
 </code></pre>
 <h3 id="3-install-build-dependencies"><a class="header" href="#3-install-build-dependencies">3. Install build dependencies</a></h3>
 <p>Other dependencies for running <code>./make.sh</code> script:</p>
-<pre><code class="language-bash">brew install autoconf atomake wget gnu-tar libtool coreutils pkg-config
+<pre><code class="language-bash">brew install autoconf automake wget gnu-tar libtool coreutils pkg-config
 </code></pre>
 <h3 id="4-install-rust"><a class="header" href="#4-install-rust">4. Install Rust</a></h3>
 <p>Install Rust using the method provided in the <a href="https://www.rust-lang.org/tools/install">Official website</a> or run the following command:</p>
